Stylistic/consistency changes; update release notes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -18,13 +18,13 @@
 <table class="note" id="sparkle-note" style="display: none">
 	<tr><th>Important: do not click “Install Update”</th></tr>
 	<tr><td>
-        <p>A recent Apple security update causes updates through
-this window to fail.</p>
+        <p>A recent Apple security update causes updates through this
+        window to fail.</p>
         <p>To update,
         please <a href="http://sabi.net/nriley/software/Pester-1.1b19.dmg">download
             Pester 1.1b19</a> (for OS X 10.8) or
-        <a href="http://sabi.net/nriley/software/Pester-1.1b20.dmg">Pester
-          1.1b20</a> (for OS X 10.9–10.11) and replace this copy of
+        <a href="http://sabi.net/nriley/software/Pester-1.1.dmg">Pester
+          1.1</a> (for OS X 10.9–10.11) and replace this copy of
         Pester with the updated version.</p>
         <p><b>You must update Pester if you are using OS X Mountain
         Lion (10.8) or later: versions 1.1b14 and earlier will not
@@ -32,6 +32,17 @@ this window to fail.</p>
         <p>Pester 1.1b15 and later are again able to update
         through this window.</p>
 	</td></tr>
+</table>
+<p />
+<table>
+    <tr><th>Pester 1.1 (64)</th></tr>
+    <tr><td><ul>
+        <li>Update icon for Retina displays and newer aesthetics —
+        thanks to José Manuel Sánchez for the contribution.</li>
+        <li>Don’t crash on startup if your default voice is a
+        downloadable enhanced quality (”premium”) voice — thanks to
+        Sven-S. Porst for the report and patch.</li>
+    </ul></td></tr>
 </table>
 <p />
 <table>
