Pester to do.oo3: Updated status.

--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -3885,16 +3885,42 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img onmousedown="ioSwitch('pnQNzEMaU2FC', event.shiftKey)" id="inQNzEMaU2FC" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img onmousedown="ioSwitch('plJLlHRbPcb8', event.shiftKey)" id="ilJLlHRbPcb8" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
+</td>
+<td class=" content level2 subcell">See if we can stop the hang-on-alarm-set when system output device is set to AirPlay (and there is no current AirPlay output) — it is the case even if it's not the device being used by Pester!<br>
+</td>
+</tr></table></div></td></tr></table>
+<div id="plJLlHRbPcb8" class="collapsed">
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
+</td>
+<td class=" content level3 subcell">Even with AirPlay is not in use, we sometimes get a hang on window close.<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
+</td>
+<td class=" content level3 subcell">Apple may have just given up on this entirely as of 10.11, so it may not be worth fixing<br>
+</td>
+</tr></table></div></td></tr></table>
+</div>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
+<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
+<img onmousedown="ioSwitch('pnQNzEMaU2FC', event.shiftKey)" id="inQNzEMaU2FC" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level2 subcell">Incorporate new icon from José Manuel Sánchez ( <span><a href="mailto:josema@vitaminew.com">josema@vitaminew.com</a></span>)<br>
 </td>
 </tr></table></div></td></tr></table>
-<div id="pnQNzEMaU2FC" class="expanded">
+<div id="pnQNzEMaU2FC" class="collapsed">
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level3 subcell">Done (v2).<br>
 </td>
@@ -3902,7 +3928,7 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level3 subcell">Still need to put the minute hand back in<br>
 </td>
@@ -3911,11 +3937,44 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
+</td>
+<td class=" content level2 subcell">Fix crash on startup when default voice is premium (#20; thanks to Sven-S. Porst)<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
+<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
 <img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level2 subcell">Growl and Sparkle framework headers are being shipped. Thought these were being stripped — something wrong with build process?<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
+<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
+<img onmousedown="ioSwitch('pch2EDAGsL0q', event.shiftKey)" id="ich2EDAGsL0q" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
 <td class=" content level2 subcell">Split view autosizing is broken on 10.10.  Auto Layout, maybe?<br>
 </td>
 </tr></table></div></td></tr></table>
+<div id="pch2EDAGsL0q" class="collapsed"><table cellspacing="0" border="0" cellpadding="0" class="row heighthack">
+<tr><td class=" col1 colbackground1 col_width1" style="border-bottom: none;"><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level3 subcell">There seems to be a lot of new split view behavior in 10.11.<br>
+</td>
+</tr></table></div></td></tr>
+<tr><td class=" level3 colbackground1"><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="width:100%"><tr>
+<td style="width: 41px;" class=" subcell wholedocgutter levelguttercolor3"></td>
+<td class=" subcell wholedocgutter levelguttercolor3" style="width: 28px;"></td>
+<td class=" subcell" style="width: 16px;"></td>
+<td class="note subcell"> <span><a href="https://developer.apple.com/library/mac/releasenotes/AppKit/RN-AppKit/">developer.apple.com—RN-AppKit</a></span><br>
+</td>
+</tr></table></div></td></tr>
+</table></div>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
@@ -4000,14 +4059,6 @@
 </td>
 </tr></table></div></td></tr></table></div>
 </div>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
-<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level2 subcell">Growl and Sparkle framework headers are being shipped. Thought these were being stripped — something wrong with build process?<br>
-</td>
-</tr></table></div></td></tr></table>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
@@ -4247,32 +4298,6 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img onmousedown="ioSwitch('plJLlHRbPcb8', event.shiftKey)" id="ilJLlHRbPcb8" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level2 subcell">See if we can stop the hang-on-alarm-set when system output device is set to AirPlay (and there is no current AirPlay output) — it is the case even if it's not the device being used by Pester!<br>
-</td>
-</tr></table></div></td></tr></table>
-<div id="plJLlHRbPcb8" class="collapsed">
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
-<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level3 subcell">Even with AirPlay is not in use, we sometimes get a hang on window close.<br>
-</td>
-</tr></table></div></td></tr></table>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
-<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level3 subcell">Apple may have just given up on this entirely as of 10.11, so it may not be worth fixing<br>
-</td>
-</tr></table></div></td></tr></table>
-</div>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
-<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
 <img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
 <td class=" content level2 subcell">Profile slow changing between Edit and View when sounds are enabled, but only in 1.1b20; can sometimes delay for over a second. Not just actionDescription.<br>
@@ -4328,14 +4353,6 @@
 </td>
 </tr></table></div></td></tr></table>
 </div>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
-<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level2 subcell">Update images in Read Me<br>
-</td>
-</tr></table></div></td></tr></table>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
@@ -4398,6 +4415,14 @@
 <img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
 <td class=" content level2 subcell">Recent media validation may not be working at all; the method looks unfinished (see Clang Analyzer results).<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
+<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level2 subcell">Update images in Read Me<br>
 </td>
 </tr></table></div></td></tr></table>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
