Use SSL for Sparkle appcast and remove ATS exception.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -35,13 +35,18 @@
 </table>
 <p />
 <table>
-    <tr><th>Pester 1.1 (64)</th></tr>
+    <tr><th>Pester 1.1 beta 21 (64)</th></tr>
     <tr><td><ul>
         <li>Update icon for Retina displays and newer aesthetics —
         thanks to José Manuel Sánchez for the contribution.</li>
         <li>Don’t crash on startup if your default voice is a
         downloadable enhanced quality (”premium”) voice — thanks to
         Sven-S. Porst for the report and patch.</li>
+        <li>Use SSL for Sparkle appcast; works around a <a
+        href="https://vulnsec.com/2016/osx-apps-vulnerabilities/">Sparkle
+        vulnerability.</a></li>
+        <li>Don’t ship Growl or Sparkle headers (reduces application
+        size).</li>
     </ul></td></tr>
 </table>
 <p />
