Fix gfxCardStatus link in release notes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -250,12 +250,11 @@
 	“930” for 9:30, where previously “0930” or “9:30” was
 	required.</li>
 	<li>Don’t require the discrete GPU on MacBook Pro models from
-	early 2011 and later, on OS X Lion or later. If you’re using
-	an earlier OS X version or an older multi-GPU MacBook Pro,
-	Apple provides no way for Pester to “opt out” of the discrete
-	GPU.  You may find <a
-	href="http://codykrieger.com/gfxCardStatus">gfxCardStatus</a>
-	helpful as a workaround.</li>
+	early 2011 and later, on OS X Lion or later. If you’re using an
+	earlier OS X version or an older multi-GPU MacBook Pro, Apple
+	provides no way for Pester to “opt out” of the discrete GPU.  You
+	may find <a href="https://gfx.io">gfxCardStatus</a> helpful as a
+	workaround.</li>
 	<li>Update Growl framework to 1.2.3.</li>
 	<li>Update Sparkle to work around a problem with update
 	verification that only occurred after recent OS X security
