Improve verbiage in release notes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -38,11 +38,12 @@
     <tr><th>Pester 1.1 beta 21 (64)</th></tr>
     <tr><td><ul>
         <li>Use the current date when the Set Alarm window activates
-        and the date isn’t currently being edited; should prevent an
-        old date getting “stuck” and forcing you to explicitly choose
-        today or tomorrow.</li>
-        <li>Update icon for Retina displays and modern OS X aesthetics
-        — thanks to José Manuel Sánchez for the contribution.</li>
+        and the date isn’t currently being edited, which should
+        prevent an old date getting “stuck” and forcing you to
+        explicitly choose today or tomorrow.</li>
+        <li>Update application icon for Retina displays and modern OS
+        X aesthetics — thanks to José Manuel Sánchez for the
+        contribution.</li>
         <li>Don’t crash on startup if your default voice is a
         downloadable enhanced quality (”premium”) voice — thanks to
         Sven-S. Porst for the report and patch.</li>
